# server_meshing

./: README.md
client/: Cargo.toml
client/src/: game.rs  main.rs  multiplayer.rs
coord_server/: Cargo.toml
coord_server/src/: main.rs
game_structs/: Cargo.toml
game_structs/src/: lib.rs  operations.rs
server/: Cargo.toml
server/src/: endpoints.rs  main.rs  streaming.rs
