[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_structs = {path="../game_structs"}
bevy = {git="https://github.com/bevyengine/bevy"}
reqwest = {version="0.11.8", features=["json", "blocking"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
futures = "0.3.19"
uuid = "0.8.2"
bincode = "1.3.3"
clap = {version="3.0.0-rc.7", features=["derive"]}