[package]
name = "coord_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
game_structs = {path="../game_structs"}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = {version="3.0.0-rc.7", features=["derive"]}
reqwest = {version="0.11.8", features=["json", "blocking"]}