[package]
name = "game_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
bevy = { git = "https://github.com/bevyengine/bevy"}
uuid = "0.8.2"