[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features=["json"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
game_structs = {path="../game_structs"}
uuid = "0.8.2"
chrono = "0.4.19"
tokio = "1.15.0"
bincode = "1.3.3"